--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "jquery": "^3.4.1",
     "js-file-download": "^0.4.7",
     "react": "^16.8.6",
     "react-button": "^1.2.1",
@@ -17,7 +18,8 @@
     "react-tooltip": "^3.10.0",
     "reactjs-popup": "^1.4.1",
     "redux": "^4.0.4",
-    "svg.js": "^2.7.1"
+    "svg.js": "^2.7.1",
+    "svgjs": "^2.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
