--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "downloadjs": "^1.4.7",
     "jquery": "^3.4.1",
     "js-file-download": "^0.4.7",
     "react": "^16.8.6",
